--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  margin: auto;
+  font-size: 62.5%;
+  max-width: 1200px;
+  padding: 0;
+}
