--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 body {
-  margin: auto;
   font-size: 62.5%;
-  max-width: 1200px;
   padding: 0;
+}
+
+.bar {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.19);
 }
