--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html {
+  height: 100vh;
+}
 body {
   font-size: 62.5%;
   padding: 0;
