--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 html {
-  height: 100vh;
-}
-body {
   font-size: 62.5%;
   padding: 0;
   box-sizing: border-box;
+  height: 100vh;
+  width: 100%;
 }
 
 .bar {
